# SplitPersonalityTraining

./: .gitignore  LICENSE  Notes on data generation.md  README.md  requirements.txt
config/: training_config.json
data/stage_3_analysis/: summary_report.json  tag_analysis.json  topic_comparisons.json
experiments/on_off_policy/: external_api_model.py  run_evaluation_experiments.py  run_external_api_evals.py  run_training_experiments.py
experiments/output_format/: plot_eval_results.py  run_generalization_experiments.py  run_output_format_evals.py  run_output_format_experiments.py  test_output_format.py
experiments/probes/: PROBES.md  __init__.py  compare_probe_vs_qwen.py  extract_activations.py  extractors.py  plot_cross_topic.py  plot_cross_topic_vs_qwen.py  plot_shapley.py  plot_sweep.py  probes.py  run_extraction.py  sweep_cross_topic.py  sweep_probes.py  sweep_shapley.py  utils.py
experiments/sysprompt/: SYSPROMPT_DOCUMENTATION.md  cfg_eval.json  cfg_train_base.json  run_all.sh  run_evaluations.py  run_multi_eval.py  sysprompt_train_sweep.csv  train.sh  (+4 more)
prompts/: base_prompt.md
scripts/: analyze_evaluation_results.py  analyze_stage_3.py  analyze_training_data_stats.py  dataset_generation_stage_1.py  dataset_generation_stage_2.py  dataset_generation_stage_3.py  shared_tools.py  tag_stage_3_data.py  utils.py
training/: README.md  cfg.json  env.json  pyproject.toml  train_lora.py
training/scripts/: FSDP_helpers.py  config.py  lora_workaround.py  trainer_LoRA.py  utils.py
training/scripts/data/: claude_data.py  data_utils.py  dataset.py  full_pipeline.py
(+256 files in other folders)
